<resources>
    <string name="app_name">Bible Verses</string>
    <string name="desc_sound_on">Sound On</string>
    <string name="desc_share">Share</string>
    <string name="desc_save_favorite">Save favorite</string>
    <string name="desc_get_verse">Get verse</string>
    <string name="desc_remove_from_favorites">Remove verse from favorites.</string>
    <string name="desc_mute" translatable="false">Mute</string>
    <string name="no_verse" translatable="false">No verse to save</string>
    <string name="desc_turn_on_sound">Turn on sound.</string>
    <string name="favorites">Favorites</string>
    <string name="text_copied">Text copied.</string>
    <string name="shake_the_phone">Shake the phone</string>
    <string name="loading">Loading…</string>
    <string name="ad_unit_main" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_units_list" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="desc_archive">Favorites</string>
</resources>